src/zdict.gen.cpp
/* Generated by re2c 3.0 */
#include "zdict.h"

#define YYMAXFILL 4




namespace zedit {

BasicDictFormatter::BasicDictFormatter(std::unordered_set<std::string>&& dict)
    : _cursor(nullptr)
    , _marker(nullptr)
    , _token(nullptr)
    , _dict(std::move(dict))
{ ; }

BasicDictFormatter::~BasicDictFormatter() { ; }

void BasicDictFormatter::add_string(const std::string& text) {
    _text = text;
    _cursor = _text.c_str();
}

zedit::Token BasicDictFormatter::get_token() {
    for(;;) {
        _token = _cursor;
    
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *_cursor;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\n':
		case '\v':
		case '\r':
		case ' ': goto yy4;
		case '.': goto yy6;
		case '0': goto yy7;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy9;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy11;
		default: goto yy2;
	}
yy1:
	++_cursor;
	{
            return zedit::Token (
                zedit::Token::END,
                0, 0
            );
        }
yy2:
	++_cursor;
yy3:
	{
            return zedit::Token (
                zedit::Token::RED,
                static_cast<std::size_t>(_token - _text.c_str()),
                static_cast<std::size_t>(_cursor - _text.c_str())
            );
        }
yy4:
	yych = *++_cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\r':
		case ' ': goto yy4;
		default: goto yy5;
	}
yy5:
	{ 
            return zedit::Token (
                zedit::Token::WHITE,
                static_cast<std::size_t>(_token - _text.c_str()),
                static_cast<std::size_t>(_cursor - _text.c_str())
            );
        }
yy6:
	yych = *++_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy13;
		default: goto yy3;
	}
yy7:
	yyaccept = 0;
	yych = *(_marker = ++_cursor);
	switch (yych) {
		case 'X':
		case 'x': goto yy20;
		default: goto yy16;
	}
yy8:
	{
            return zedit::Token (
                zedit::Token::BLUE,
                static_cast<std::size_t>(_token - _text.c_str()),
                static_cast<std::size_t>(_cursor - _text.c_str())
            );
        }
yy9:
	yyaccept = 1;
	yych = *(_marker = ++_cursor);
	switch (yych) {
		case '.': goto yy13;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy9;
		case 'E':
		case 'e': goto yy19;
		default: goto yy10;
	}
yy10:
	{
            return zedit::Token (
                zedit::Token::BLUE,
                static_cast<std::size_t>(_token - _text.c_str()),
                static_cast<std::size_t>(_cursor - _text.c_str())
            );
        }
yy11:
	yych = *++_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy11;
		default: goto yy12;
	}
yy12:
	{
            auto name = std::string(_token, _cursor - _token);
            return zedit::Token (
                (_dict.find(name) != _dict.end())
                    ? zedit::Token::GREEN
                    : zedit::Token::RED,
                static_cast<std::size_t>(_token - _text.c_str()),
                static_cast<std::size_t>(_cursor - _text.c_str())
            );
        }
yy13:
	yyaccept = 2;
	yych = *(_marker = ++_cursor);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy13;
		case 'E':
		case 'e': goto yy19;
		default: goto yy14;
	}
yy14:
	{
            return zedit::Token (
                zedit::Token::BLUE,
                static_cast<std::size_t>(_token - _text.c_str()),
                static_cast<std::size_t>(_cursor - _text.c_str())
            );
        }
yy15:
	yyaccept = 0;
	yych = *(_marker = ++_cursor);
yy16:
	switch (yych) {
		case '.': goto yy13;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7': goto yy15;
		case '8':
		case '9': goto yy17;
		case 'E':
		case 'e': goto yy19;
		default: goto yy8;
	}
yy17:
	yych = *++_cursor;
	switch (yych) {
		case '.': goto yy13;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy17;
		case 'E':
		case 'e': goto yy19;
		default: goto yy18;
	}
yy18:
	_cursor = _marker;
	switch (yyaccept) {
		case 0: goto yy8;
		case 1: goto yy10;
		default: goto yy14;
	}
yy19:
	yych = *++_cursor;
	switch (yych) {
		case '+':
		case '-': goto yy21;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy22;
		default: goto yy18;
	}
yy20:
	yych = *++_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f': goto yy23;
		default: goto yy18;
	}
yy21:
	yych = *++_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy22;
		default: goto yy18;
	}
yy22:
	yych = *++_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy22;
		default: goto yy14;
	}
yy23:
	yych = *++_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f': goto yy23;
		default: goto yy24;
	}
yy24:
	{
            return zedit::Token (
                zedit::Token::BLUE,
                static_cast<std::size_t>(_token - _text.c_str()),
                static_cast<std::size_t>(_cursor - _text.c_str())
            );
        }
}

    }
}

} // namespace zedit
